# test-mnist

./: CLAUDE.md  Cargo.toml  benchmark_freq_locked.sh
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: dequantize.rs  dequantize_kernel.rs  dequantize_weights.rs
crates/test-mnist/: Cargo.toml
crates/test-mnist/src/: data.rs  inference.rs  lib.rs  model.rs
src/: inference.rs  main.rs  model.rs  training.rs
