[package]
name = "test-mnist"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = {
    version = "0.22.0-pre.1",
    features = ["std", "tui", "train", "vision"],
    default-features = false,
    git = "https://github.com/tracel-ai/burn"
}

[features]
default = []
wgpu = ["burn/wgpu"]
cpu = ["burn/flex"]
