[workspace]
resolver = "2"

members = ["crates/test-mnist", "crates/benchmarks"]
default-members = ["crates/test-mnist"]

[workspace.package]
edition = "2024"
version = "0.0.1"
license = "MIT OR Apache-2.0"
readme = "README.md"


[workspace.dependencies]
burn = {
    path = "../burn/crates/burn",
    features = ["std", "tui", "train", "vision", "flex", "wgpu", "cpu"],
    default-features = false,
}

[patch."https://github.com/tracel-ai/burn"]
burn = { path = "../burn/crates/burn" }

[patch."https://github.com/tracel-ai/cubecl"]
cubecl = { path = "../cubecl/crates/cubecl" }
cubecl-common = { path = "../cubecl/crates/cubecl-common" }


[profile.dev]
debug = 0 # Speed up compilation time and not necessary.
