

[package]
authors = ["Tracel Technologies Inc."]
categories = ["science"]
description = "Benchmarks of quantize"
edition.workspace = true
license.workspace = true
name = "benchmarks"
readme = "README.md"
version = "0.1.0"

[features]
wgpu = []
f32 = []


[dependencies]
burn = { workspace = true, default-features = false }
burnbench = { path = "../../../burn-bench/crates/burnbench" }
test-mnist = { path = "../test-mnist" }
cubek-quant = { path = "../../../cubek/crates/cubek-quant" }
cubecl = { git = "https://github.com/tracel-ai/cubecl", default-features = false, features = [
    "wgpu",
] }

# [patch."https://github.com/tracel-ai/burn"]
# burn = { path = "../../burn/crates/burn" }

# [patch."https://github.com/tracel-ai/cubecl"]
# cubecl = { path = "../../cubecl/crates/cubecl" }


[[bench]]
harness = false
name = "dequantize"

[[bench]]
harness = false
name = "dequantize_kernel"
